# nezha_description

./: README.md
nezha_description/: CMakeLists.txt  ReadMe.md  package.xml
nezha_description/.marscode/: deviceInfo.json
nezha_description/config/: joint_names_nezha.yaml  robot_control.yaml  robot_control_group.yaml
nezha_description/launch/: display.launch  gazebo.launch
nezha_description/meshes/: FL_calf_Link.STL  FL_foot_Link.STL  FL_thigh_Link.STL  FR_calf_Link.STL  FR_foot_Link.STL  FR_thigh_Link.STL  RL_calf_Link.STL  RL_foot_Link.STL  RL_thigh_Link.STL  RR_calf_Link.STL  RR_foot_Link.STL  RR_thigh_Link.STL  imu_fixed_joint.STL
nezha_description/urdf/: nezha_description.gv  nezha_description.urdf  nezha_description_for_usd.urdf
nezha_description/usd/: .asset_hash
nezha_description/xacro/: robot.xacro
